<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewTaskActivity"
    android:padding="8dp">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/task_title"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/priorityEditText" />

    <EditText
        android:id="@+id/titleEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:inputType="textMultiLine"
        app:layout_constraintBaseline_toBaselineOf="@+id/titleTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/titleTextView"
        android:autofillHints="title"
        android:hint="@string/task_title_desc"/>

    <TextView
        android:id="@+id/outcomeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/task_outcome"
        app:layout_constraintStart_toStartOf="@+id/titleTextView"
        app:layout_constraintTop_toBottomOf="@+id/titleEditText" />

    <EditText
        android:id="@+id/outcomeEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:inputType="textMultiLine"
        app:layout_constraintBaseline_toBaselineOf="@+id/outcomeTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/outcomeTextView"
        android:autofillHints="effect"
        android:hint="@string/task_outcome_desc"/>

    <TextView
        android:id="@+id/actionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/task_first_action"
        app:layout_constraintStart_toStartOf="@+id/outcomeTextView"
        app:layout_constraintTop_toBottomOf="@+id/outcomeEditText" />

    <EditText
        android:id="@+id/actionEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:inputType="textMultiLine"
        app:layout_constraintBaseline_toBaselineOf="@+id/actionTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/actionTextView"
        android:autofillHints="activity"
        android:hint="@string/task_action_desc"/>

    <TextView
        android:id="@+id/basketTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/task_basket"
        app:layout_constraintStart_toStartOf="@+id/actionTextView"
        app:layout_constraintTop_toBottomOf="@+id/actionEditText" />

    <Spinner
        android:id="@+id/basketSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/basketTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/basketTextView"
        app:layout_constraintTop_toTopOf="@+id/basketTextView" />

    <TextView
        android:id="@+id/categoryTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/task_category"
        app:layout_constraintStart_toStartOf="@+id/basketTextView"
        app:layout_constraintTop_toBottomOf="@+id/basketSpinner" />

    <EditText
        android:id="@+id/categoryEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:inputType="textMultiLine"
        app:layout_constraintBaseline_toBaselineOf="@+id/categoryTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/categoryTextView"
        android:autofillHints="category"
        android:hint="@string/task_category_desc"/>

    <CheckBox
        android:id="@+id/reminderCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/task_set_reminder"
        app:layout_constraintStart_toStartOf="@+id/categoryTextView"
        app:layout_constraintTop_toBottomOf="@+id/categoryEditText" />

    <TextView
        android:id="@+id/reminderTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/task_reminder_set_at"
        app:layout_constraintStart_toStartOf="@+id/reminderCheckBox"
        app:layout_constraintTop_toBottomOf="@+id/reminderCheckBox"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/dateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/task_date_placeholder"
        app:layout_constraintBaseline_toBaselineOf="@+id/reminderTextView"
        app:layout_constraintStart_toEndOf="@+id/reminderTextView"
        android:visibility="invisible"/>

    <!-- add pickable priority from A to E -->
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="96dp"
        android:text="Priority"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/priorityEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        android:autofillHints="category"
        android:hint="A to E" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:text="Save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_priority_a" />


</androidx.constraintlayout.widget.ConstraintLayout>